--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
+    "cypress:dev": "cypress run --config baseUrl=https://lcfs-dev.apps.silver.devops.gov.bc.ca/",
     "cypress:clear": "cypress cache clear"
   },
   "lint-staged": {
@@ -60,7 +61,7 @@
     "keycloak-js": "^23.0.3",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.10",
-    "quill": "^1.3.7",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
