--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
     "uuid": "^9.0.1",
     "vite": "^5.1.7",
     "vite-plugin-svgr": "^4.2.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
