--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
     "storybook:build": "storybook build",
     "test": "vitest --ui",
+    "test:run": "vitest run",
     "cypress:install": "cypress install",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
