check node version

--- a/.github/workflows/frontend-auto-test.yaml
+++ b/.github/workflows/frontend-auto-test.yaml
@@ -20,8 +20,5 @@ jobs:
 
       - name: Start frontend test
         run: |
-          cd frontend
-          npm install
-          npm run test
-
+          node --version
 
