update test scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview",
     "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "test": "vitest --ui",
+    "test": "vitest",
+    "test.ui": "vitest --ui",
+    "test.coverage": "vitest --coverage",
     "cypress:install": "cypress install",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
