--- a/.github/workflows/backend-auto-test.yaml
+++ b/.github/workflows/backend-auto-test.yaml
@@ -1,12 +1,12 @@
-name: Backend Auto Test
+name: Backend Test
 
 on: 
   pull_request:
     types: [opened, edited, synchronize]
     branches: 
       - "feat/prashanth-ci-cd-test-pipeline-619"
-    paths: 
-      - "backend"
+    # paths: 
+    #   - "backend"
   workflow_dispatch:
 
 jobs:
