--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "keycloak-js": "^23.0.3",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.10",
+    "papaparse": "^5.4.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
