--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,8 @@
     "keycloak-js": "^23.0.3",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.10",
+    "moment": "^2.30.1",
+    "mui-daterange-picker-plus": "^1.0.4",
     "papaparse": "^5.4.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
