--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-i18next": "^14.0.3",
+    "react-input-mask": "^2.0.4",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
     "react-snowfall": "^1.2.1",
