--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -4,13 +4,61 @@ on:
   pull_request:
     types: [labeled]
 
+env:
+  VERSION: 0.2.0
+  GIT_URL: https://github.com/bcgov/lcfs.git 
+  TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-tools
+  DEV_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-dev
+
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true  
+
 jobs:
+
   build:
     if: contains(github.event.pull_request.labels.*.name, 'build')
+    name: Build LCFS
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+
+    env:
+      PRE_RELEASE: ${{ github.event.pull_request.number }}
 
     steps:
 
-      - name: Run build
-        run: echo "well done for pr build ... ..."
+      - name: Check out repository
+        uses: actions/checkout@v4.1.1
+        with: 
+          ref: ${{ github.event.pull_request.head.ref }} 
+          
+      - name: verify ref
+        run: |
+          pwd
+          ls -l 
+          echo .github/workflows/pr-build.yaml
 
+      # - name: Log in to Openshift
+      #   uses: redhat-actions/oc-login@v1.3
+      #   with:
+      #     openshift_server_url: ${{ secrets.OPENSHIFT_SERVER }}
+      #     openshift_token: ${{ secrets.OPENSHIFT_TOKEN }}
+      #     insecure_skip_tls_verify: true
+      #     namespace: ${{ env.TOOLS_NAMESPACE }}
+
+      # - name: Build LCFS Backend
+      #   run: |
+      #     cd openshift/templates
+      #     oc process -f ./backend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PRE_RELEASE }} GIT_URL=${{ env.GIT_URL }} GIT_REF=${{ github.event.pull_request.head.ref }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}
+      #     sleep 5s
+      #     oc -n ${{ env.TOOLS_NAMESPACE }} wait --for=condition=Complete --timeout=900s build/lcfs-backend-${{ env.VERSION }}-${{ env.PRE_RELEASE }}-1
+      #     oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PRE_RELEASE }} ${{ env.DEV_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PRE_RELEASE }}
+
+      # - name: Build LCFS Frontend
+      #   run: |
+      #     cd openshift/templates
+      #     oc process -f ./frontend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PRE_RELEASE }} GIT_URL=${{ env.GIT_URL }} GIT_REF=${{ github.event.pull_request.head.ref }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}    
+      #     sleep 5s
+      #     oc -n ${{ env.TOOLS_NAMESPACE }} wait --for=condition=Complete --timeout=900s build/lcfs-frontend-${{ env.VERSION }}-${{ env.PRE_RELEASE }}-1
+      #     oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PRE_RELEASE }} ${{ env.DEV_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PRE_RELEASE }}
